# litres-pdf

./: .gitignore  README.md  config.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
litres/: book_processor.py  constants.py  exceptions.py  utils.py
litres/commands/: book_request.py  extract_audiobook.py  extract_o3_book.py  extract_o4_book.py
litres/config/: __init__.py  logging.py  settings.py
litres/engines/: audio_merge.py  base.py  base_content_processor.py  img_2_pdf.py  o4_2_fb2.py  o4_2_pdf.py  o4_2_txt.py
litres/engines/o3/: pdf_engine.py
litres/engines/o4/: fb2_engine.py  pdf_engine.py  txt_engine.py
litres/engines/o4/processors/: content_processor.py  fb2_processor.py  pdf_processor.py
litres/handlers/: __init__.py  base.py  handler_url_audiobook.py  handler_url_o3.py  handler_url_o4.py  handler_url_o5.py
litres/loaders/: audio_loader.py  base_loader.py  pdf_loader.py  text_loader.py
litres/models/: __init__.py  book.py  output_path_handler.py
litres/services/: __init__.py  api_client.py  auth_service.py  book_processor.py  downloader.py  pdf.py
litres/services/loaders/: loader.py  pdf_loader.py  text_loader.py
litres/services/pipelines/: base.py  pdf.py  text.py
litres/services/pipelines/processors/: base.py  (+3 more)
tests/: test_auth_service.py  test_base_loader_command.py  test_book_models.py  test_book_processor.py  test_book_request_command.py  test_exceptions.py  test_handlers.py  test_output_path_handler.py  test_pdf_loader_command.py  test_text_loader_command.py  test_utils.py
tests/services/: test_api_client.py
